# clngine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  run.sh
dependencies/glad/: glad.c
dependencies/glad/include/glad/: glad.h
include/: camera.h  camera.hpp  data.hpp  databuffer.hpp  engine.hpp  gameobj.hpp  graphics.h  input.h  instanced_mesh_group.hpp  meshgeometry.h  meshgeometry.hpp  meshutils.h  meshutils.hpp  physics.hpp  shader.h  shader.hpp
shader/: fragment.glsl  vertex.glsl
shaders/: fragment.glsl  indepFrag.glsl  indepVert.glsl  vertex.glsl
src/: camera.cpp  engine.cpp  gpumesh.cpp  input.cpp  main.cpp  meshgeometry.cpp  meshutils.cpp  physics.cpp  shader.cpp
